corrected author spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -70,7 +70,7 @@
 }
 
 // make non-headings slightly lighter
-.post-content p {
+.post-content p, .post-content li {
    font-size: 20px;
    color: #515151;
 }
